# image_labeling_tool

./: .gitignore  README.md
label_tool/: CMakeLists.txt  package.xml  plugin.xml
label_tool/config/: label.yaml  label_tool.perspective
label_tool/include/label_tool/: label_tool_rqt_plugin.h
label_tool/include/label_tool/rqt/: scene.h
label_tool/launch/: label_tool.launch
label_tool/src/: label_tool_rqt_plugin.cpp
label_tool/src/rqt/: label_tool.ui  scene.cpp
label_tool_msgs/: CMakeLists.txt  package.xml
label_tool_msgs/msg/: ImageWithPolygonEdges.msg
label_tool_msgs/srv/: ImagesToLabel.srv  ImagesWithSelection.srv
